--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@slack/client": "^3.14.1",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "request": "^2.83.0"
   }
 }
